link fixes for the nav

--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
 						<ul class="nav-desktop__list">
 
 							<li class="nav-desktop__item">
-								<a class="nav-link nav-link--primary" href="portfolio.html">Portfolio
+								<a class="nav-link nav-link--primary" href="index.html">Home
+								</a>
+							</li>
+							<li class="nav-desktop__item">
+								<a class="nav-link nav-link--secondary" href="portfolio.html">Portfolio
 								</a>
 							</li>
 
@@ -40,7 +44,7 @@
 								</a>
 							</li>
 							<li class="nav-desktop__item nav-mobile__item">
-								<a class="nav-link nav-link--primary" href="portfolio.html">Portfolio
+								<a class="nav-link nav-link--secondary" href="portfolio.html">Portfolio
 								</a>
 							</li>
 						<li class="nav-desktop__item nav-mobile__item">
@@ -66,7 +70,7 @@
 </div>
 
 <!-- desktop hero image -->
-<h1>
+<h1 class="">
 	DSCVR | Student Portfolio Show <br />
 	<strong>May 3</strong>
 </h1>
