--- a/portfolio.html
+++ b/portfolio.html
@@ -11,46 +11,50 @@
 </head>
 <body>
 
-  <header class="nav-desktop nav-mobile">
-    <nav>
-      <!-- Mobile Nav header: logo and hamburger menu STARTS -->
-      <div class="nav-mobile__navbar">
-        <a href="index.html" class="nav-mobile__logo">
-          <img id="mobileLogo" src="dist/img/branding/dscvr1.5x.png" alt="DSCVR Logo" /></a>
-          <nav>
-            <ul class="nav-desktop__list">
+	<header class="nav-desktop nav-mobile">
+  	  <nav>
+  		  <!-- Mobile Nav header: logo and hamburger menu STARTS -->
+  		  <div class="nav-mobile__navbar">
+  			  <a href="index.html" class="nav-mobile__logo">
+  				  <img id="mobileLogo" src="dist/img/branding/dscvr1.5x.png" alt="DSCVR Logo" /></a>
+  				  <nav>
+  					  <ul class="nav-desktop__list">
 
-              <li class="nav-desktop__item">
-                <a class="nav-link nav-link--primary" href="portfolio.html">Portfolio
-                </a>
-              </li>
+  						  <li class="nav-desktop__item">
+  							  <a class="nav-link nav-link--primary" href="index.html">Home
+  							  </a>
+  						  </li>
+  						  <li class="nav-desktop__item">
+  							  <a class="nav-link nav-link--secondary" href="portfolio.html">Portfolio
+  							  </a>
+  						  </li>
 
-            <li  class="nav-desktop__item">
-              <a class=" nav-link nav-link--tertiary" href="contact.html">Contact
-              </a>
-            </li>
-          </ul>
-        </nav>
-        <a id="hamburger"><i  class="fas fa-bars fa-2x nav-mobile__hamburger"></i></a>
-      </div>
+  					  <li  class="nav-desktop__item">
+  						  <a class=" nav-link nav-link--tertiary" href="contact.html">Contact
+  						  </a>
+  					  </li>
+  				  </ul>
+  			  </nav>
+  			  <a id="hamburger"><i  class="fas fa-bars fa-2x nav-mobile__hamburger"></i></a>
+  		  </div>
 
-      <!-- Mobile Nav header: logo and hamburger menu ENDS -->
+  		  <!-- Mobile Nav header: logo and hamburger menu ENDS -->
 
-      <ul id="mobileMenu" class="mobile-menu nav-mobile--bg-stripes">
-        <li class="nav-desktop__item nav-mobile__item">
-          <a class="nav-link nav-link--primary" href="index.html">Home
-          </a>
-        </li>
-        <li class="nav-desktop__item nav-mobile__item">
-          <a class="nav-link nav-link--primary" href="portfolio.html">Portfolio
-          </a>
-        </li>
-      <li  class="nav-desktop__item nav-mobile__item">
-        <a class=" nav-link nav-link--tertiary" href="contact.html">Contact
-        </a>
-      </li>
-    </ul>
-  </nav>
+  		  <ul id="mobileMenu" class="mobile-menu nav-mobile--bg-stripes">
+  						  <li class="nav-desktop__item nav-mobile__item">
+  							  <a class="nav-link nav-link--primary" href="index.html">Home
+  							  </a>
+  						  </li>
+  						  <li class="nav-desktop__item nav-mobile__item">
+  							  <a class="nav-link nav-link--secondary" href="portfolio.html">Portfolio
+  							  </a>
+  						  </li>
+  					  <li class="nav-desktop__item nav-mobile__item">
+  						  <a class=" nav-link nav-link--tertiary" href="contact.html">Contact
+  						  </a>
+  					  </li>
+  				  </ul>
+    </nav>
   </header>
   <!-- NAVIGATION ENDS -->
 
